# logutil

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
src/: app.rs  file_reader.rs  file_selector.rs  file_settings.rs  helpers.rs  lib.rs  log_data.rs  main.rs  memory_db.rs  progress_bar.rs  settings.rs  tab_manager.rs  tui_manager.rs
src/tabs/: base.rs  bots.rs  detailed.rs  errors.rs  heatmap.rs  mod.rs  overview.rs  performance.rs  requests.rs  security.rs  sparkline.rs
tests/: helpers_tests.rs  log_data_tests.rs  memory_db_tests.rs  performance_tests.rs
