[package]
name = "logutil"
version = "0.6.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
regex = "1"
structopt = "0.3"
log = "0.4.22"
crossterm = "0.27"
prettytable = "0.10.0"
chrono = "0.4.38"
ratatui = "0.27.0"
textwrap = "0.16.1"

[profile.release]
opt-level = "z" # Оптимизация для размера
lto = true # Включение Link Time Optimization
codegen-units = 1 # Уменьшение количества единиц компиляции для лучшей оптимизации
panic = "abort" # Уменьшение объема кода для обработки паник
strip = true # Удаление символов отладки
