[package]
name = "logutil"
version = "0.13.2"
edition = "2021"
authors = ["s00d <Virus191288@gmail.com>"]
description = "log Util is a Rust-based tool designed to help you monitor and analyze Nginx access logs in real-time."
homepage = "https://github.com/s00d/logutil"
repository = "https://github.com/s00d/logutil"
readme = "README.md"
license = "MIT"
keywords = ["log", "analyzer", "nginx", "rust"]
exclude = [
    "assets/",
    ".git/",
    ".idea/",
    "target/",
    "node_modules/",
    ".github/",
    ".DS_Store",
    "example.log",
    "logger.js",
    "todo.md",
    ".github_token",
    "Dockerfile",
]

[lib]
name = "logutil"
path = "src/lib.rs"

[[bin]]
name = "logutil"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
regex-lite = "0.1.6"
structopt = "0.3"
log = "0.4.27"
crossterm = "0.29.0"
chrono = "0.4.41"
ratatui = "0.29.0"
textwrap = "0.16.2"
env_logger = "0.11.8"
anyhow = "1.0"
arboard = "3.6.0"
rayon = "1.8"

[profile.release]
opt-level = "z" # Оптимизация для размера
lto = true # Включение Link Time Optimization
codegen-units = 1 # Уменьшение количества единиц компиляции для лучшей оптимизации
panic = "abort" # Уменьшение объема кода для обработки паник
strip = true # Удаление символов отладки

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1.47.0", features = ["full"] }
